--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
 
   <header>
     <br>
-    <center><b><i>Wake Me App</i></b></center>
+    <center><b><i>NapStop</i></b></center>
   </header>
 
 <main class="container">
@@ -29,7 +29,7 @@
 
       <div ng-hide='sleeping'>
         <center>
-        <i>Wake me when I'm close to...</i>
+        <i>Make my Nap Stop before my Bus Stop</i>
         </center>
         <br>
 
