--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -11,14 +11,13 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="app.js"></script>
     <script type="text/javascript" charset="utf-8" src="cordova.js">
-
     </script>
 
   </head>
 
   <header>
     <br>
-    <center><b><i>Wake Me App</i></b></center>
+    <center><b><i>NapStop</i></b></center>
   </header>
 
 <main class="container">
@@ -29,7 +28,7 @@
 
       <div ng-hide='sleeping'>
         <center>
-        <i>Wake me when I'm close to...</i>
+        <i>Make my Nap Stop before my Bus Stop</i>
         </center>
         <br>
 
