--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -13,6 +13,7 @@
     <script src="js/angular-local-storage.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
     <script src="js/app.js"></script>
+    <script src='js/toggle.js'></script>
     <script type="text/javascript" charset="utf-8" src="cordova.js">
     </script>
 
